load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "scoped_timer",
    hdrs = ["scoped_timer.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dbscan",
    srcs = ["dbscan.cpp"],
    hdrs = ["dbscan.hpp"],
    copts = [
        "-fopenmp",
    ],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
    deps = [
        "@nanoflann",
    ],
)

cc_binary(
    name = "py_dbscan.so",
    srcs = ["py_dbscan.cpp"],
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        ":dbscan",
        "@pybind11",
    ],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cpp"],
    deps = [
        ":dbscan",
        "@nanobench",
    ],
)

cc_test(
    name = "test",
    srcs = ["dbscan_test.cpp"],
    deps = [
        ":dbscan",
        ":scoped_timer",
        "@doctest//doctest",
        "@doctest//doctest:main",
    ],
)
