load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "scoped_timer",
    hdrs = ["scoped_timer.hpp"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dbscan",
    srcs = ["dbscan.cpp"],
    hdrs = ["dbscan.hpp"],
    copts = ["-fopenmp"],
    linkopts = ["-fopenmp"],
    visibility = ["//visibility:public"],
)

pybind_extension(
    name = "py_dbscan",
    srcs = ["py_dbscan.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":dbscan",
    ],
)

py_library(
    name = "py_dbscan_lib",
    data = [
        ":py_dbscan",
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "benchmark",
    srcs = ["benchmark.cpp"],
    deps = [
        ":dbscan",
        "@nanobench",
    ],
)
