load("@rules_python//python:defs.bzl", "py_binary", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@pypi//:requirements.bzl", "requirement")

compile_pip_requirements(
    name = "requirements",
    timeout = "moderate",
    extra_args = [
        "--allow-unsafe",
        "-v",
    ],
    requirements_in = "requirements.in",
    requirements_txt = "requirements_lock.txt",
    tags = [
        "manual",
    ],
)

py_binary(
    name = "benchmark",
    srcs = ["benchmark.py"],
    data = [
        "//cpp:py_dbscan.so",
    ],
    deps = [
        requirement("scikit-learn"),
        requirement("numpy"),
    ],
)

py_test(
    name = "dbscan_test",
    timeout = "short",
    srcs = ["dbscan_test.py"],
    data = [
        "//cpp:py_dbscan.so",
    ],
    deps = [
        requirement("scikit-learn"),
        requirement("pytest"),
    ],
)
